# GK_Projekt

./: CMakeLists.txt  GK2025-Funkcje.cpp  GK2025-MedianCut.cpp  GK2025-MedianCut.h  GK2025-Paleta.cpp  GK2025-Paleta.h  GK2025-Pliki.cpp  GK2025-Pliki.h  GK2025-Projekt.depend  GK2025-Projekt.layout  GK2025-Zmienne.cpp  GK2025-Zmienne.h  README.md
